Enforce some basic error prone build rules
Start enforcing some basic build rules against TF AOSP for
starter.
- Fix the string format issue.

Test: error prone run
Bug: 35864476
Change-Id: Ia6bb9a7acd6883e1240bf83f5451e66b3298c6f8