@@ -29,6 +29,7 @@ import com.android.tradefed.result.InputStreamSource;
 import com.android.tradefed.result.LogDataType;
 import com.android.tradefed.testtype.IDeviceTest;
 import com.android.tradefed.testtype.IRemoteTest;
+import com.android.tradefed.util.StreamUtil;
 
 import org.junit.Assert;
 
@@ -65,7 +66,7 @@ public class CameraSettingsTest implements IDeviceTest, IRemoteTest {
     private static final String TEST_RU = "CameraApplicationStress";
 
     private final String mOutputPath = "cameraStressOutput.txt";
-    private final int MAX_TIME_OUT = 90 * 60 * 1000; //90 mins
+    private static final int MAX_TIME_OUT = 90 * 60 * 1000; //90 mins
 
     @Option(name="testMethodName", description="Used to specify a specific test method to run")
     private String mTestMethodName = null;
@@ -157,13 +158,7 @@ public class CameraSettingsTest implements IDeviceTest, IRemoteTest {
         } catch (IOException e) {
             CLog.e(String.format("IOException reading from file: %s", e.toString()));
         } finally {
-            if (reader != null) {
-                try {
-                    reader.close();
-                } catch (IOException e) {
-                    CLog.e(String.format("IOException closing file: %s", e.toString()));
-                }
-            }
+            StreamUtil.close(reader);
         }
 
         // Output file looks like:
@@ -185,14 +180,14 @@ public class CameraSettingsTest implements IDeviceTest, IRemoteTest {
 
             Matcher expectedMatcher = EXPECTED_LOOP_COUNT_PATTERN.matcher(line);
             if (expectedMatcher.matches()) {
-                expectedCount = new Integer(expectedMatcher.group(3));
+                expectedCount = Integer.valueOf(expectedMatcher.group(3));
                 CLog.d(String.format("Found expected count for key \"%s\": %s",
                         key, expectedCount));
             }
 
             Matcher actualMatcher = ACTUAL_LOOP_COUNT_PATTERN.matcher(line);
             if (actualMatcher.matches()) {
-                actualCount = 1 + new Integer(actualMatcher.group(3));
+                actualCount = 1 + Integer.valueOf(actualMatcher.group(3));
                 CLog.d(String.format("Found actual count for key \"%s\": %s", key, actualCount));
             }
 
